@@ -4,14 +4,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.wildcodeschool.myblog.dto.ArticleAuthorDTO;
 import org.wildcodeschool.myblog.dto.ArticleDTO;
-import org.wildcodeschool.myblog.model.Article;
-import org.wildcodeschool.myblog.model.Category;
-import org.wildcodeschool.myblog.model.Image;
-import org.wildcodeschool.myblog.repository.ArticleRepository;
-import org.wildcodeschool.myblog.repository.CategoryRepository;
-import org.wildcodeschool.myblog.repository.ImageRepository;
+import org.wildcodeschool.myblog.dto.AuthorDTO;
+import org.wildcodeschool.myblog.model.*;
+import org.wildcodeschool.myblog.repository.*;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
@@ -20,34 +19,23 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping("/articles")
 public class ArticleController {
-
     private final ArticleRepository articleRepository;
     private final CategoryRepository categoryRepository;
     private final ImageRepository imageRepository;
+    private final AuthorRepository authorRepository;
+    private final ArticleAuthorRepository articleAuthorRepository;
 
     public ArticleController(
             ArticleRepository articleRepository,
             CategoryRepository categoryRepository,
-            ImageRepository imageRepository, ImageRepository imageRepository1
-    ) {
+            ImageRepository imageRepository,
+            AuthorRepository authorRepository,
+            ArticleAuthorRepository articleAuthorRepository) {
         this.articleRepository = articleRepository;
         this.categoryRepository = categoryRepository;
-        this.imageRepository = imageRepository1;
-    }
-
-    private ArticleDTO convertToDTO(Article article) {
-        ArticleDTO articleDTO = new ArticleDTO();
-        articleDTO.setId(article.getId());
-        articleDTO.setTitle(article.getTitle());
-        articleDTO.setContent(article.getContent());
-        articleDTO.setUpdatedAt(article.getUpdatedAt());
-        if (article.getCategory() != null) {
-            articleDTO.setCategoryName(article.getCategory().getName());
-        }
-        if (article.getImages() != null) {
-            articleDTO.setImageUrls(article.getImages().stream().map(Image::getUrl).collect(Collectors.toList()));
-        }
-        return articleDTO;
+        this.imageRepository = imageRepository;
+        this.authorRepository = authorRepository;
+        this.articleAuthorRepository = articleAuthorRepository;
     }
 
     @GetMapping
@@ -56,8 +44,44 @@ public class ArticleController {
         if (articles.isEmpty()) {
             return ResponseEntity.noContent().build();
         }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
+        List<ArticleDTO> articleDTOs = articles.stream().map(this::convertToDTO).collect(Collectors.toList());
+        return ResponseEntity.ok(articleDTOs);
+    }
+
+    @GetMapping("/search-title")
+    public ResponseEntity<List<Article>> getArticlesByTitle(@RequestParam String searchTerms) {
+        List<Article> articles = articleRepository.findByTitle(searchTerms);
+        if (articles.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+        return ResponseEntity.ok(articles);
+    }
+
+    @GetMapping("/search-content-containing")
+    public ResponseEntity<List<Article>> getArticlesByContentContaining(@RequestParam String searchContent) {
+        List<Article> articles = articleRepository.findByContentContaining(searchContent);
+        if (articles.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+        return ResponseEntity.ok(articles);
+    }
+
+    @GetMapping("/search-created-after")
+    public ResponseEntity<List<Article>> getArticlesCreatedAfter(@RequestParam LocalDateTime searchDate) {
+        List<Article> articles = articleRepository.findByCreatedAtAfter(searchDate);
+        if (articles.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+        return ResponseEntity.ok(articles);
+    }
+
+    @GetMapping("/last-five")
+    public ResponseEntity<List<Article>> getLastFiveArticlesOrdered() {
+        List<Article> articles = articleRepository.findTop5ByOrderByCreatedAtDesc();
+        if (articles.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+        return ResponseEntity.ok(articles);
     }
 
     @GetMapping("/{id}")
@@ -67,46 +91,6 @@ public class ArticleController {
             return ResponseEntity.notFound().build();
         }
         return ResponseEntity.ok(convertToDTO(article));
-    }
-
-    @GetMapping("/search-title")
-    public ResponseEntity<List<ArticleDTO>> getArticlesByTitle(@RequestParam String searchTerms) {
-        List<Article> articles = articleRepository.findByTitle(searchTerms);
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
-    }
-
-    @GetMapping("/search-content")
-    public ResponseEntity<List<ArticleDTO>> getArticlesByContent(@RequestParam String searchTerms) {
-        List<Article> articles = articleRepository.findByContent(searchTerms);
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
-    }
-
-    @GetMapping("/search-created-after")
-    public ResponseEntity<List<ArticleDTO>> getArticlesCreateAfter(@RequestParam LocalDateTime searchDate) {
-        List<Article> articles = articleRepository.findByCreatedAtAfter(searchDate);
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
-    }
-
-    @GetMapping("/search-five-last")
-    public ResponseEntity<List<ArticleDTO>> getFiveLastArticles() {
-        List<Article> articles = articleRepository.findTop5ByOrderByCreatedAtDesc();
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
     }
 
     @PostMapping
@@ -122,6 +106,8 @@ public class ArticleController {
             }
             article.setCategory(category);
         }
+
+        // Ajout des images
 
         if (article.getImages() != null && !article.getImages().isEmpty()) {
             List<Image> validImages = new ArrayList<>();
@@ -144,6 +130,22 @@ public class ArticleController {
         }
 
         Article savedArticle = articleRepository.save(article);
+
+        // Ajout des auteurs dans la table de jointure
+        if (article.getArticleAuthors() != null) {
+            for (ArticleAuthor articleAuthor : article.getArticleAuthors()) {
+                Author author = articleAuthor.getAuthor();
+                author = authorRepository.findById(author.getId()).orElse(null);
+                if (author == null) {
+                    return ResponseEntity.badRequest().body(null);
+                }
+
+                articleAuthor.setAuthor(author);
+                articleAuthor.setArticle(savedArticle);
+
+                articleAuthorRepository.save(articleAuthor);
+            }
+        }
         return ResponseEntity.status(HttpStatus.CREATED).body(convertToDTO(savedArticle));
     }
 
@@ -167,6 +169,8 @@ public class ArticleController {
             }
             article.setCategory(category);
         }
+
+        // Mise à jour des images
 
         if (articleDetails.getImages() != null) {
             List<Image> validImages = new ArrayList<>();
@@ -192,6 +196,38 @@ public class ArticleController {
             article.getImages().clear();
         }
 
+        if (articleDetails.getArticleAuthors() != null) {
+            // Supprimer manuellement les anciens ArticleAuthor
+            for (ArticleAuthor oldArticleAuthor : article.getArticleAuthors()) {
+                articleAuthorRepository.delete(oldArticleAuthor);
+            }
+
+            List<ArticleAuthor> updatedArticleAuthors = new ArrayList<>();
+
+            for (ArticleAuthor articleAuthorDetails : articleDetails.getArticleAuthors()) {
+                Author author = articleAuthorDetails.getAuthor();
+                author = authorRepository.findById(author.getId()).orElse(null);
+                if (author == null) {
+                    return ResponseEntity.badRequest().build();
+                }
+
+                // Créer et associer la nouvelle relation ArticleAuthor
+                ArticleAuthor newArticleAuthor = new ArticleAuthor();
+                newArticleAuthor.setAuthor(author);
+                newArticleAuthor.setArticle(article);
+                newArticleAuthor.setContribution(articleAuthorDetails.getContribution());
+
+                updatedArticleAuthors.add(newArticleAuthor);
+            }
+
+            for (ArticleAuthor articleAuthor : updatedArticleAuthors) {
+                articleAuthorRepository.save(articleAuthor);
+            }
+
+            article.setArticleAuthors(updatedArticleAuthors);
+        }
+
+
         Article updatedArticle = articleRepository.save(article);
         return ResponseEntity.ok(convertToDTO(updatedArticle));
     }
@@ -204,7 +240,42 @@ public class ArticleController {
             return ResponseEntity.notFound().build();
         }
 
+        // Supprimer les associations ArticleAuthor manuellement
+        if (article.getArticleAuthors() != null) {
+            for (ArticleAuthor articleAuthor : article.getArticleAuthors()) {
+                articleAuthorRepository.delete(articleAuthor);
+            }
+        }
+
         articleRepository.delete(article);
         return ResponseEntity.noContent().build();
+    }
+
+    private ArticleDTO convertToDTO(Article article) {
+        ArticleDTO articleDTO = new ArticleDTO();
+        articleDTO.setId(article.getId());
+        articleDTO.setTitle(article.getTitle());
+        articleDTO.setContent(article.getContent());
+        articleDTO.setUpdatedAt(article.getUpdatedAt());
+        if (article.getCategory() != null) {
+            articleDTO.setCategoryName(article.getCategory().getName());
+        }
+        if (article.getImages() != null) {
+            articleDTO.setImageUrls(article.getImages().stream().map(Image::getUrl).collect(Collectors.toList()));
+        }
+
+        if (article.getArticleAuthors() != null) {
+            articleDTO.setAuthorDTOs(article.getArticleAuthors().stream()
+                    .filter(articleAuthor -> articleAuthor.getAuthor() != null)
+                    .map(articleAuthor -> {
+                        AuthorDTO authorDTO = new AuthorDTO();
+                        authorDTO.setId(articleAuthor.getAuthor().getId());
+                        authorDTO.setFirstname(articleAuthor.getAuthor().getFirstname());
+                        authorDTO.setLastname(articleAuthor.getAuthor().getLastname());
+                        return authorDTO;
+                    })
+                    .collect(Collectors.toList()));
+        }
+        return articleDTO;
     }
 }
